<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginTop="15dp"
    android:id="@+id/layout_view_summary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/layoutViewVisits"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_between_items"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_map_pin"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/txt_visits"
                android:layout_marginLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                android:textSize="@dimen/text_title" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_label"
            android:textColor="@color/black"
            android:text="@string/summary_visits"
        />
    </LinearLayout>
    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/layoutViewCalls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/margin_between_items"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_phone"
                app:tint="@color/black"/>

            <TextView
                android:id="@+id/txt_calls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:textSize="@dimen/text_title"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                android:text="0"
            />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_label"
            android:textColor="@color/black"
            android:text="@string/summary_calls"
        />
    </LinearLayout>
    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/layoutViewMails"
        android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_between_items"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="@dimen/icon_size2"
                    android:src="@drawable/ic_mail"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/txt_mails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_title"
                    android:layout_marginLeft="4dp"
                    android:textColor="@color/secondary"
                    android:textStyle="bold"
                    android:text="0"
                />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_label"
                android:textColor="@color/black"
                android:text="@string/summary_mails"
            />
    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/layoutViewProposal"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_between_items"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_file_text"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/txt_proposal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title"
                android:layout_marginLeft="4dp"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                android:text="0"
            />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_label"
            android:textColor="@color/black"
            android:text="@string/summary_proposal"
        />
    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/layoutViewReunion"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_between_items"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_icon_briefcase"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/txt_reunion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title"
                android:layout_marginLeft="4dp"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                android:text="0"
            />
        </LinearLayout>

        <TextView
            android:id="@+id/text_reunion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_label"
            android:textColor="@color/black"
            android:text="@string/summary_reunion"
        />
    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/layoutViewMore"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_between_items"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/icon_size2"
                android:layout_height="@dimen/icon_size2"
                android:src="@drawable/ic_more"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/txt_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title"
                android:layout_marginLeft="4dp"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                android:text="0"
            />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_label"
            android:textColor="@color/black"
            android:text="@string/summary_more"
        />
    </LinearLayout>


</LinearLayout>